# story-manager

./: .gitignore  create_story.py  fetch_story.py  handler.py  location_validator.py  pyproject.toml  serverless.yml  test.py  test_data.py  tree_validator.py
.circleci/: config.yml
stories/: create.py  get.py  location_validator.py  tree_validator.py
story/: create.py  get.py  response.py  tree_validator.py
story_manager/: check_passphrase.py  create.py  get.py  report.py  response.py  tree_validator.py  update.py  wander.py
tests/: __init__.py  test.py  test_data.py  test_location_validator.py  test_story_manager.py  test_tree_validator.py
utils/: diceware.py  location_validator.py  tree_validator.py  word_list.py
