[tool.poetry]
name = "story-manager"
version = "0.1.0"
description = "Story manager backend for bj playa adventure"
authors = ["Hanu Kunduru <hanu.prateek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.38"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^19.10b0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
